<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plain">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="225dp"
        android:layout_height="85dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:contentDescription="@string/title"
        app:srcCompat="@drawable/title1" />

    <ImageButton
        android:id="@+id/Medium"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:background="@android:color/transparent"
        android:scaleX=".8"
        android:scaleY=".8"
        android:text="@string/medium"
        android:contentDescription="@string/medium"
        app:srcCompat="@drawable/button_01" />

    <ImageButton
        android:id="@+id/Paper"
        android:layout_width="95dp"
        android:layout_height="90dp"
        android:layout_row="1"
        android:layout_column="1"
        android:background="@android:color/transparent"
        android:scaleX=".8"
        android:scaleY=".8"
        android:translationX="-19dp"
        android:text="@string/paper"
        android:contentDescription="@string/paper"
        app:srcCompat="@drawable/button_02" />

    <ImageButton
        android:id="@+id/Drawing"
        android:layout_width="95dp"
        android:layout_height="90dp"
        android:layout_row="1"
        android:layout_column="2"
        android:background="@android:color/transparent"
        android:scaleX=".8"
        android:scaleY=".8"
        android:translationX="-40dp"
        android:text="@string/drawing"
        android:contentDescription="@string/drawing"
        app:srcCompat="@drawable/button_03" />

    <ImageButton
        android:id="@+id/Canvas"
        android:layout_width="95dp"
        android:layout_height="90dp"
        android:layout_row="1"
        android:layout_column="3"
        android:background="@android:color/transparent"
        android:scaleX=".8"
        android:scaleY=".8"
        android:translationX="-60dp"
        android:text="@string/canvas"
        android:contentDescription="@string/canvas"
        app:srcCompat="@drawable/button_04" />

    <ImageButton
        android:id="@+id/Tools"
        android:layout_width="95dp"
        android:layout_height="90dp"
        android:layout_row="1"
        android:layout_column="4"
        android:background="@android:color/transparent"
        android:scaleX=".8"
        android:scaleY=".8"
        android:translationX="-80dp"
        android:text="@string/tools"
        android:contentDescription="@string/tools"
        app:srcCompat="@drawable/button_05" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="225dp"
        android:layout_height="85dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:translationY="-10dp"
        android:contentDescription="@string/title"
        app:srcCompat="@drawable/titlebar02" />

    <ImageButton
        android:id="@+id/Mood"
        android:layout_width="380dp"
        android:layout_height="119dp"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:scaleType="center"
        android:scaleX=".8"
        android:scaleY=".8"
        android:translationY="-20dp"
        android:text="@string/mood"
        android:contentDescription="@string/mood"
        app:srcCompat="@drawable/smallfolder" />


    <ImageButton
        android:id="@+id/Projects"
        android:layout_width="374dp"
        android:layout_height="234dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:background="@android:color/transparent"
        android:scaleX=".8"
        android:scaleY=".8"
        android:translationX="5dp"
        android:translationY="-30dp"
        android:text="@string/projects"
        android:contentDescription="@string/projects"
        app:srcCompat="@drawable/largefolder" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="225dp"
        android:layout_height="85dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:translationY="-25dp"
        android:contentDescription="@string/title"
        app:srcCompat="@drawable/titlebar03" />


    <ImageButton
        android:id="@+id/main"
        android:layout_width="95dp"
        android:layout_height="102dp"
        android:layout_row="6"
        android:layout_column="0"
        android:background="@android:color/transparent"
        android:scaleX=".7"
        android:scaleY=".7"
        android:translationY="-10dp"
        android:text="@string/home"
        android:contentDescription="@string/home"
        app:srcCompat="@drawable/home" />

    <ImageButton
        android:id="@+id/favorite"
        android:layout_width="96dp"
        android:layout_height="102dp"
        android:layout_row="6"
        android:layout_column="1"
        android:background="@android:color/transparent"
        android:scaleX=".7"
        android:scaleY=".7"
        android:translationX="-29dp"
        android:translationY="-10dp"
        android:text="@string/favorite"
        android:contentDescription="@string/favorite"
        app:srcCompat="@drawable/favorite" />

    <ImageButton
        android:id="@+id/todolist"
        android:layout_width="94dp"
        android:layout_height="102dp"
        android:layout_row="6"
        android:layout_column="2"
        android:background="@android:color/transparent"
        android:scaleX=".7"
        android:scaleY=".7"
        android:translationX="-58dp"
        android:translationY="-10dp"
        android:text="@string/todo"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/hamburger" />

    <ImageButton
        android:id="@+id/idea"
        android:layout_width="94dp"
        android:layout_height="102dp"
        android:layout_row="6"
        android:layout_column="3"
        android:background="@android:color/transparent"
        android:scaleX=".7"
        android:scaleY=".7"
        android:translationX="-87dp"
        android:translationY="-10dp"
        android:text="@string/idea"
        android:contentDescription="@string/idea"
        app:srcCompat="@drawable/idea" />

    <ImageButton
        android:id="@+id/color"
        android:layout_width="126dp"
        android:layout_height="102dp"
        android:layout_row="6"
        android:layout_column="4"
        android:background="@android:color/transparent"
        android:contentDescription="@string/color"
        android:scaleX=".7"
        android:scaleY=".7"
        android:text="@string/color"
        android:translationX="-124dp"
        android:translationY="-10dp"
        app:srcCompat="@drawable/color" />

</GridLayout>




